# LibtorchSegmentation

./: .gitignore  CMakeLists.txt  Config.cmake.in  LICENSE  README-Chinese.md  README.md  segmentation.pc.in  trace.py
docs/: training tricks.md
include/: DeepLab.h  DeepLabDecoder.h  FPN.h  FPNDecoder.h  LinkNet.h  LinknetDecoder.h  PAN.h  PANDecoder.h  PSPNet.h  ResNet.h  Segmentor.h  readfile.h  util.h
src/: DeepLab.cpp  FPN.cpp  FPNDecoder.cpp  LinkNet.cpp  LinknetDecoder.cpp  PAN.cpp  PANDecoder.cpp  PSPNet.cpp  PSPNetDecoder.cpp  ResNet.cpp  SegDataset.cpp  SegDataset.h  Segmentor.h  UNet.cpp  main.cpp  util.cpp
src/architectures/: DeepLab.cpp  DeepLab.h  DeepLabDecoder.cpp  DeepLabDecoder.h  FPN.cpp  FPN.h  FPNDecoder.cpp  FPNDecoder.h  LinkNet.cpp  LinkNet.h  LinknetDecoder.h  PAN.cpp  PAN.h  PANDecoder.h  PSPNet.cpp  PSPNet.h  PSPNetDecoder.h  UNet.cpp  UNet.h  UNetDecoder.cpp  UNetDecoder.h
src/backbones/: ResNet.cpp  ResNet.h  VGG.cpp  VGG.h
src/utils/: Augmentations.cpp  Augmentations.h  InterFace.h  loss.h  readfile.h  util.cpp  util.h
test/: CMakeLists.txt  resnet34.cpp  train.cpp
voc_person_seg/train/: 2007_000027.json  2007_000170.json  2007_000272.json  2007_000346.json  2007_000423.json  2007_000664.json  2007_000733.json  2007_000783.json  2007_000799.json  2007_000807.json  2007_000836.json  2007_000847.json  2007_000999.json  2007_001185.json  2007_001408.json  2007_001430.json  2007_001585.json  2007_001627.json  2007_001630.json  2007_001717.json  2007_002293.json  2007_002728.json  2007_002824.json  2007_003106.json  2007_003188.json  2007_003189.json  2007_003191.json  2007_003205.json  2007_003530.json  2007_003541.json  2007_003742.json  2007_003745.json
voc_person_seg/val/: 2007_003747.json  2007_004000.json  2007_004133.json  2007_004197.json  2007_004476.json  2007_004712.json  2007_005086.json  2007_005124.json
